# power-consumption-app

./: 404.html  README.md  app.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
backend/module-bash/: index.html
backend/module-engine/: index.html
docs/: how-to-guides.md  index.md  reference.md
docs/backend/: module-bash.md  module-engine.md
explanation/: index.html
how-to-guides/: index.html
reference/: index.html
src/backend/: __init__.py  bash.py  engine.py
